# codex-auth-pool

./: .gitignore  README.md  README_CN.md  codex-auth-pool  export-standalone.sh  install.sh  pyproject.toml
src/codex_auth_pool/: main.py
tests/: test_rotation_logic.py
