[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-auth-pool"
version = "0.1.6"
description = "Multi-account auth pool manager for Codex Desktop and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zhang Yutao" }
]
keywords = ["codex", "openai", "chatgpt", "desktop", "auth", "rotation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
codex-auth-pool = "codex_auth_pool.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
